# earthkit-transforms

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  Makefile  README.md  README.rst  _fix_docstrings.py  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: ci.yaml  downstream-ci-hpc.yaml  downstream-ci.yaml  on-push-orchestrate.yaml  on-push.yaml  on-push.yml  on-release.yaml  on-release.yml  qa.yaml
ci/: combined-environment-ci.yml  environment-ci.yml  environment-integration.yml
coucal/: _options.py  aggregate.py  climate.py
docs/: Makefile  aggregate-examples.md  aggregate-examples.rst  api-reference.rst  clean_autodocs.py  conf.py  development.md  development.rst  examples.md  getting-started.rst  how-tos.rst  howto.rst  index.md  index.rst  install.md  install.rst  licence.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/furo/sidebar/: logo.html
docs/autodocs/: earthkit.transforms.climatology.rst  earthkit.transforms.ensemble.rst  earthkit.transforms.rst  earthkit.transforms.spatial.rst  earthkit.transforms.temporal.rst
docs/explanations/: climatology.rst
docs/guide/: climatology.rst  dimension-detection.rst  ensemble.rst  index.rst  spatial.rst  temporal.rst
docs/guide/aggregate/: climatology.rst  index.rst  spatial.rst  temporal.rst
docs/how-tos/: howto_area_mean_era5_geometry.ipynb  howto_calculate_daily_mean_era5.ipynb  howto_calculate_monthly_mean_era5.ipynb  howto_mask_era5_with_geometry.ipynb
docs/notebooks/: aggregate-climatology.ipynb  aggregate-examples.rst  aggregate-spatial.ipynb  aggregate-temporal.ipynb  decorator-examples.ipynb  requirements-for-notebooks.sh
docs/notebooks/aggregate/: aggregate-spatial.ipynb
docs/notebooks/aggregate/climatology/: 01-era5-climatology.ipynb  02-era5-anomaly.ipynb
docs/notebooks/aggregate/spatial/: 01-era5-masking.ipynb  02-era5-reduce-data-over-geometries.ipynb
docs/notebooks/aggregate/temporal/: 01-era5-general-methods.ipynb  02-era5-daily-monthly-statistics.ipynb  03-seas5-daily-statistics.ipynb  04-era5-bespoke-how-function.ipynb
docs/notebooks/climatology/: 01-era5-climatology.ipynb  02-era5-anomaly.ipynb
docs/notebooks/spatial/: 01-era5-masking.ipynb  02-era5-reduce-data-over-geometries.ipynb  index.rst
docs/notebooks/temporal/: 01-era5-general-methods.ipynb  02-era5-daily-monthly-statistics.ipynb  02-era5-daily-statistics.ipynb  03-seas5-daily-statistics.ipynb  04-era5-bespoke-how-function.ipynb  05-accumulation-to-rate-examples.ipynb  index.rst
docs/release-notes/: index.rst  version_0.3_updates.rst  version_0.4_updates.rst  version_0.5_updates.rst
docs/source/: api-reference.rst  clean_autodocs.py  conf.py  contributing.rst  earthkit-packages.yml  faq.rst  index.rst  why.rst
docs/source/_static/: custom.css  custom.js
docs/source/autodocs/: earthkit.transforms.climatology.rst  earthkit.transforms.ensemble.rst  earthkit.transforms.rst  earthkit.transforms.spatial.rst  earthkit.transforms.temporal.rst  earthkit.transforms.version.rst
docs/source/concepts/: climatology.rst  spatial.rst
docs/source/explanations/: index.rst  spatial.rst  temporal.rst
docs/source/how-tos/: howto_area_mean_era5_geometry.ipynb  howto_calculate_daily_mean_era5.ipynb  howto_calculate_monthly_mean_era5.ipynb  howto_mask_era5_with_geometry.ipynb  index.rst
docs/source/how-tos/climatology/: howto_climatology_mean_era5.ipynb  index.rst
docs/source/how-tos/spatial/: howto_area_mean_era5_geometry.ipynb  index.rst  (+2 more)
docs/source/release-notes/: index.rst  version_0.4_updates.rst  version_0.5_updates.rst  version_1.0_updates.rst
docs/tutorials/: index.rst
docs/tutorials/climatology/: 01-era5-climatology.ipynb  index.rst
docs/tutorials/spatial/: 01-era5-masking.ipynb  02-era5-reduce-data-over-geometries.ipynb
docs/tutorials/temporal/: 04-era5-bespoke-how-function.ipynb  05-accumulation-to-rate-examples.ipynb  index.rst
earthkit/aggregate/: __init__.py  climatology.py  general.py  spatial.py  temporal.py  tools.py
earthkit/climate/: __init__.py  _language.py  _options.py  aggregate.py  climate.py  climatology.py  shapes.py  tools.py
earthkit/climate/aggregate/: __init__.py  climatology.py  general.py  spatial.py  temporal.py  tools.py
earthkit/transforms/: __init__.py  tools.py
earthkit/transforms/aggregate/: __init__.py  climatology.py  general.py  spatial.py  temporal.py
feature/release-action-update/: .buildinfo  development.html  genindex.html  index.html  install.html  licence.html  objects.inv  py-modindex.html  search.html  searchindex.js
feature/release-action-update/_api/: index.html
feature/release-action-update/_sources/: development.rst.txt
feature/release-action-update/guide/: climatology.html  index.html  spatial.html  temporal.html
feature/release-action-update/notebooks/: aggregate-examples.html
feature/release-action-update/release-notes/: index.html  version_0.3_updates.html
notebooks/: aggregate.ipynb  climate.ipynb  requirements-for-notebooks.txt  shapes.ipynb  temporal.ipynb  test.ipynb  test.nc
src/earthkit/transforms/: __init__.py  _aggregate.py  _tools.py  _transform_inputs.py  aggregate.py  climatology.py  ensemble.py  spatial.py  temporal.py  tools.py
tests/: test_00_version.py  test_10_shapes.py  test_10_tools.py  test_20_aggregate.py  test_20_general.py  test_30_spatial.py  test_30_temporal.py  test_30_temporal_aggregate.py  test_30_temporal_rates.py  test_40_climatology.py  test_50_ensemble.py  todo_test_10_shapes.py
tests/backwards_compatibility/: test_00_version.py  test_20_general.py  test_30_temporal.py  test_40_climatology.py
tests/legacy-api/: test_01_legacy_namespaces.py  test_30_spatial.py  test_30_temporal.py  test_40_climatology.py  test_50_ensemble.py  test_legacy_10_tools.py  test_legacy_20_general.py  test_legacy_30_spatial.py  test_legacy_30_temporal.py  test_legacy_40_climatology.py  test_legacy_50_ensemble.py
tyto/: __init__.py  aggregate.py  climate.py  language.py
(+82 files in other folders)
