[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "array-api-compat",
  "xarray>=2022.3.0",
  "numpy>=1.18",
  "earthkit-data>=0.11.2",
  "earthkit-utils",
  "geopandas"
]
description = "Aggregation tools for meteorological and climate data."
dynamic = ["version"]
license = "Apache-2.0"
name = "earthkit-transforms"
readme = "README.md"

[project.optional-dependencies]
all = [
  # Additional, heavy, dependencies required by the complete package
  "rasterio"  # Requires GDAL
]
rasterio = [
  "rasterio"  # Requires GDAL
]

[tool.coverage.run]
branch = true

[tool.mypy]
exclude = '^tests/legacy-api/'
ignore_missing_imports = true

[tool.ruff]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools.packages.find]
include = ["earthkit.transforms"]
where = ["src/"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/earthkit/transforms/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
