[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "xarray>=2022.3.0",
  "numpy>=1.18",
  "earthkit-utils>=1.0.0rc1",
  "geopandas"
]
description = "Aggregation tools for meteorological and climate data."
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]
name = "earthkit-transforms"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
  "earthkit-data>=1.0.0rc0",
  "rasterio"  # Requires GDAL
]
ci = [
  "pre-commit",
  "mypy",
  "pytest",
  "pytest-cov",
  "pandas-stubs",
  "types-PyYAML",
  "earthkit-data",
  "rasterio"  # Requires GDAL
]
docs = [
  "ipykernel",
  "Pygments>=2.6.1",
  "Sphinx",
  "entrypoints",
  "filelock",
  "furo",
  "sphinx-design",
  "nbsphinx",
  "myst-parser",
  "tqdm",
  "pandoc",
  "pypandoc-binary",
  "PyYAML",
  "setuptools",
  "statsmodels",
  "reverse-geocode",
  "rasterio",
  "earthkit-plots>=1.0.0rc0",
  "earthkit-utils",
  "earthkit-data"
]

[tool.coverage.run]
branch = true

[tool.mypy]
exclude = '(^tests/legacy-api/|^build/)'
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "D1",  # pydocstyle: Missing Docstrings
  "D107",  # pydocstyle: numpy convention
  "D203",
  "D205",
  "D212",
  "D213",
  "D401",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
select = [
  "F",  # pyflakes
  "E",  # pycodestyle
  "W",  # pycodestyle warnings
  "I",  # isort
  "D"  # pydocstyle
]

[tool.setuptools.packages.find]
include = ["earthkit.transforms"]
where = ["src/"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/earthkit/transforms/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
